Fix column spacing for address and FOI
• display block and add padding on the spans
• negative bottom margin to counter the effect of br's

https://www.pivotaltracker.com/story/show/57989610

--- a/app/assets/stylesheets/frontend/views/_organisations.scss
+++ b/app/assets/stylesheets/frontend/views/_organisations.scss
@@ -706,7 +706,11 @@
       }
       .adr {
         margin: 0 0 $gutter-one-third;
-
+        span {
+          display: block;
+          padding-right: $gutter-half;
+          margin-bottom: -($gutter-half+$gutter-one-third);
+        }
         p {
           margin: 0;
         }
